--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -1,37 +1,50 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-        <link href="/static/styles.css" rel="stylesheet">
-        <title>Birthdays</title>
-    </head>
-    <body>
-        <div class="header">
-            <h1>Birthdays</h1>
+
+<head>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link href="/static/styles.css" rel="stylesheet">
+    <title>Birthdays</title>
+</head>
+
+<body>
+    <div class="header">
+        <h1>Birthdays</h1>
+    </div>
+    <div class="container">
+        <div class="section">
+
+            <h2>Add a Birthday</h2>
+            <form method="post" action="/">
+                <input type="text" name="Name" placeholder="Name" autofocus>
+                <input type="text" name="Month" placeholder="Month">
+                <input type="text" name="Day" placeholder="Day">
+                <input type="submit" value="Add Birthday">
+            </form>
         </div>
-        <div class="container">
-            <div class="section">
 
-                <h2>Add a Birthday</h2>
-                <!-- TODO: Create a form for users to submit a name, a month, and a day -->
-            </div>
+        <div class="section">
 
-            <div class="section">
-
-                <h2>All Birthdays</h2>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Birthday</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <!-- TODO: Loop through the database entries to display them in this table -->
-                    </tbody>
-                </table>
-            </div>
+            <h2>All Birthdays</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Birthday</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for birthday in birthdays %}
+                    <tr>
+                        <th>{{ birthday.name }}</th>
+                        <th>{{ birthday.month }}/{{ birthday.day }}</th>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
