--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -7,8 +7,10 @@ Sell
 {% block main %}
 <form action="/sell" method="post">
     <div class="mb-3">
-        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbole" name="symbole" placeholder="Symbole" type="text">
-        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="amount" name="amount" placeholder="Amount" type="number" min = "0">
+        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbole" name="symbole"
+            placeholder="Symbole" type="text">
+        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="amount" name="amount"
+            placeholder="Amount" type="number" min="0">
         <button class="btn btn-primary" type="submit">Sell</button>
     </div>
 </form>
