change $ symbole to usd func

--- a/finance/templates/history.html
+++ b/finance/templates/history.html
@@ -27,8 +27,8 @@ History
             <th>{{ history_part["symbole"] }}</th>
             <th>{{ history_part["type"] }}</th>
             <th>{{ history_part["amount"] }}</th>
-            <th>{{ history_part["price"] }}$</th>
-            <th>{{ history_part["total_price"] }}$</th>
+            <th>{{ history_part["price"] }}</th>
+            <th>{{ history_part["total_price"] }}</th>
             <th>{{ history_part["date"] }}</th>
         </tr>
         {% endif %}
@@ -38,8 +38,8 @@ History
             <th>{{ history_part["symbole"] }}</th>
             <th>{{ history_part["type"] }}</th>
             <th>{{ history_part["amount"] }}</th>
-            <th>{{ history_part["price"] }}$</th>
-            <th>{{ history_part["total_price"] }}$</th>
+            <th>{{ history_part["price"] }}</th>
+            <th>{{ history_part["total_price"] }}</th>
             <th>{{ history_part["date"] }}</th>
         </tr>
         {% endif %}
