--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -7,9 +7,9 @@ Index
 {% block main %}
 <h1>General account status</h1>
 <br>
-<h3>Available cash: {{ cash }}$</h3>
-<h4>Investments: {{ investments }}$</h4>
-<h4>Total finance: {{ total_finance }}$</h4>
+<h3>Available cash: {{ cash }}</h3>
+<h4>Investments: {{ investments }}</h4>
+<h4>Total finance: {{ total_finance }}</h4>
 
 <table class="container table table-striped">
     <thead>
@@ -24,7 +24,7 @@ Index
         <tr scope="row">
             <th>{{ finance["symbole"] }}</th>
             <th>{{ finance["amount"] }}</th>
-            <th>{{ finance["value"] }}$</th>
+            <th>{{ finance["value"] }}</th>
         </tr>
         {% endfor %}
     </tbody>
