--- a/finance/templates/quoted.html
+++ b/finance/templates/quoted.html
@@ -7,7 +7,7 @@ Quoted
 {% block main %}
 <form action="/quote" method="post">
     <div class="mb-3">
-        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbole" name="symbole"
+        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbole" name="symbol"
             placeholder="Symbole" type="text">
         <button class="btn btn-primary" type="submit">quote</button>
     </div>
