--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -7,7 +7,7 @@ Sell
 {% block main %}
 <form action="/sell" method="post">
     <div class="mb-3">
-        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbole" name="symbole"
+        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbole" name="symbol"
             placeholder="Symbole" type="text">
         <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="amount" name="amount"
             placeholder="Amount" type="number" min="0">
