--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -9,7 +9,7 @@ Buy
     <div class="mb-3">
         <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbole" name="symbol"
             placeholder="Symbole" type="text">
-        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="amount" name="amount"
+        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="amount" name="shares"
             placeholder="Amount" type="number" min="0">
         <button class="btn btn-primary" type="submit">Buy</button>
     </div>
